--- a/src/sass/custom.scss
+++ b/src/sass/custom.scss
@@ -147,11 +147,13 @@ Landing
   width: 100%;
   overflow: hidden;
   position: relative;
-  height: 160%;
+  height: 140%;
+  min-height: 1100px;
 }
 
 @include mixins.screen("desktop") {
   #landing {
+    min-height: 930px;
     height: 100%;
   }
 }
@@ -301,8 +303,8 @@ Landing
 .landing-btn {
   transition: all $anim-speed;
   border-radius: 50%;
-  height: 8vh;
-  width: 8vh;
+  height: 5rem;
+  width: 5rem;
   text-align: center;
   z-index: -1;
 
@@ -407,7 +409,7 @@ nav {
     position: absolute;
     width: 100%;
     height: 100%;
-    left: 0;
+    left: -10px;
     top: 0;
     border-radius: 10px;
     z-index: 10;
