--- a/src/includes/featured-projects.liquid
+++ b/src/includes/featured-projects.liquid
@@ -1,37 +1,38 @@
-<!-- START PROJECTS -->
 <div id="projects" class="container content-section">
     <div class="section-head right-head">Featured Projects</div>
 
+    {% for project in featured-projects %}
     <div class="content-box feature-box" id="proj-launchhacks">
     <div class="content content-text feature-content">
 
         <div class="row">
         <div class="col-9">
-            <div class="feature-label github">
-            LaunchHacks
-            <div class="feature-tag itch no-mobile">
-                Event
+            <div class="feature-label {{project.color}}">
+            {{project.name}}
+            <div class="feature-tag {{project.tagColor}} no-mobile">
+                {{project.tag}}
             </div>
             </div>
         </div>
         <div class="col-3 feature-link-container">
-            <span class="feature-link" onclick="openInNewTab('https://github.com/64bitpandas')">
+            <span class="feature-link" onclick="openInNewTab('{{project.github}}')">
             <i class="fab fa-github"></i>
             </span>
-            <span class="feature-link" onclick="openInNewTab('https://github.com/64bitpandas')">
+            <span class="feature-link" onclick="openInNewTab('{{project.link}}')">
             <i class="fas fa-external-link-square-alt"></i>
             </span>
         </div>
         </div>
 
         <div class="row">
-        <div class="col-6">
-            In 2019, I organized a 24 hour long hackathon for 100 high school students. Insert more content here!
+        <div class="col-6 feature-text">
+            {{project.description}}
         </div>
         <div class="col-6 feature-img-container">
-            <img src="img/launchhacks.jpg" class="feature-img">
+            <img src="img/{{project.image}}" class="feature-img">
         </div>
         </div>
 
     </div>
+    {% endfor %}
 </div>
