--- a/src/includes/landing.liquid
+++ b/src/includes/landing.liquid
@@ -19,7 +19,7 @@
             </div>
           </div>
           <div class="col-2 splash-button-col">
-            <div class="landing-btn resume" id="resume-btn" onclick="openInNewTab('https://bencuan.me/resume')">
+            <div class="landing-btn resume" id="resume-btn" onclick="openInNewTab('resume')">
               <i class="fas fa-file-pdf"></i>
             </div>
           </div>
