Add featured projects content

--- a/src/includes/more-projects.liquid
+++ b/src/includes/more-projects.liquid
@@ -69,4 +69,10 @@
     {% endif %}
 {% endfor %}
 
+
+</div>
+ <div class="center">
+    <div id="more-proj-btn" class="btn-proj center" onclick="toggleMoreProjects()">
+        <div class="content">View More</div>
+    </div>
 </div>
