--- a/src/includes/about.liquid
+++ b/src/includes/about.liquid
@@ -51,7 +51,7 @@
         </div>
         <div class="col-9 tools-text"><b>Linux of all flavors</b> as my OS of choice</div>
         </div>
-        <img class="about-img" src="img/icon.png"></img>
+        <img class="about-img" alt="Profile Image" src="img/icon.png" loading="lazy">
     </div>
 
     </div>
