--- a/src/includes/featured-projects.liquid
+++ b/src/includes/featured-projects.liquid
@@ -29,7 +29,7 @@
             {{project.description}}
         </div>
         <div class="col-6 feature-img-container">
-            <img src="img/{{project.image}}" class="feature-img">
+            <img src="img/{{project.image}}" alt="{{project.name}}" class="feature-img" loading="lazy">
         </div>
         </div>
 
