--- a/src/includes/nav.liquid
+++ b/src/includes/nav.liquid
@@ -7,7 +7,7 @@
     <div id="nav-fill-resume" class="nav-fill resume"></div>
     <div class="row no-mobile">
       <div class="col-1">
-        <a href="#landing" id="nav-home"><img src="img/icon-no-bg.png"></a>
+        <a href="#landing" id="nav-home"><img src="img/icon-no-bg.png" alt="Panda"></a>
       </div>
       <div class="col-2">
         <a href="#about" id="nav-about"><i class="fas fa-info-circle"></i>  About</a>
@@ -24,7 +24,7 @@
       </div>
     </div>
     <div class="mobile-only row">
-      <a href="#landing" id="mobile-nav-home"><img src="img/icon-no-bg.png"></a>
+      <a href="#landing" id="mobile-nav-home"><img src="img/icon-no-bg.png" alt="Panda"></a>
       <div id="burger-btn" class="burger burger-rotate">
         <div class="burger-lines"></div>
       </div>
