Optimize loading times a bit

--- a/src/includes/footer.liquid
+++ b/src/includes/footer.liquid
@@ -4,7 +4,8 @@
   <div class="footer-text center"><a class="link" href="/2018">2018</a> | <a class="link" href="/2019">2019</a></div>
 </footer>
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
-  <script src="https://kit.fontawesome.com/585da7c89d.js" crossorigin="anonymous"></script>
   <script src="js/vendor/noframework.waypoints.min.js"></script>
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
+    <link rel="stylesheet" href="/fontcustom/fontcustom.css">
+  <script src="https://kit.fontawesome.com/585da7c89d.js" crossorigin="anonymous"></script>
