--- a/src/includes/head.liquid
+++ b/src/includes/head.liquid
@@ -18,7 +18,7 @@
   <link rel="stylesheet" href="/css/normalize.css">
   <link rel="stylesheet" href="/css/simple-grid.min.css">
   <link rel="stylesheet" href="/css/main.css">
-  <link rel="stylesheet" href="/fontcustom/fontcustom.css">
+  <link rel="stylesheet" href="https://use.typekit.net/jps3ukf.css">
   <link rel="stylesheet" href="/css/custom.css">
 
   <meta name="theme-color" content="#fafafa">
