More minor optimizations

--- a/src/includes/footer.liquid
+++ b/src/includes/footer.liquid
@@ -3,6 +3,8 @@
   <div class="footer-text center"><a class="link" target="_blank" rel="noopener" href="https://github.com/64bitpandas/bencuan.me">Browse the source at <i class="fab fa-github footer-icon"></i> !</a></div>
   <div class="footer-text center"><a class="link" href="/2018">2018</a> | <a class="link" href="/2019">2019</a></div>
 </footer>
+  <link rel="stylesheet" href="/css/normalize.css">
+  <link rel="stylesheet" href="https://use.typekit.net/jps3ukf.css">
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="js/vendor/noframework.waypoints.min.js"></script>
   <script src="js/plugins.js"></script>
