Update project listings

--- a/src/includes/about.liquid
+++ b/src/includes/about.liquid
@@ -21,15 +21,16 @@
             <i class="fab fa-html5"></i>
             <i class="fab fa-sass"></i>
             <i class="fab fa-js"></i>
+            <i class="fab fa-react"></i>
         </div>
-        <div class="col-9 tools-text"><b>HTML5/CSS/Sass/JavaScript (ES6+)</b> for frontend development</div>
+        <div class="col-9 tools-text"><b>HTML5/CSS/Sass/JavaScript/React (Native)</b> for frontend development</div>
         </div>
         <div class="row">
         <div class="col-2 tool-icons">
             <i class="fab fa-node-js"></i>
-            <i class="icon-flask"></i>
+            <i class="icon-django"></i>
         </div>
-        <div class="col-9 tools-text"><b>Node.js and Flask</b> for backend development</div>
+        <div class="col-9 tools-text"><b>Node.js and Django</b> for backend development</div>
         </div>
         <div class="row">
         <div class="col-2 tool-icons">
