--- a/src/includes/landing.liquid
+++ b/src/includes/landing.liquid
@@ -4,7 +4,7 @@
       <div class="splash-box" id="landing-box">
         <div class="splash-hi mobile-center">Hi! I'm</div>
         <div class="splash-name mobile-center">Ben Cuan.</div>
-        <div class="splash-desc mobile-center">I'm a software developer and game designer.</div>
+        <div class="splash-desc mobile-center">I'm a student software developer.</div>
         <div class="splash-button-container row no-mobile">
           <div class="col-1"></div>
           <div class="col-2 splash-button-col">
