Fix hexcaliber link

--- a/src/includes/about.liquid
+++ b/src/includes/about.liquid
@@ -10,7 +10,7 @@
         <br><br>
 
         In addition to the typical software stack, you can often find me <b>designing and developing games</b> with my
-        fellow developers at <a href="#" class="link">Trisagion Games</a>.
+        fellow developers at <a href="https://github.com/hexcaliber-dev" class="link">Hexcaliber Games</a>.
 
         <br><br>
 
