--- a/src/includes/footer.liquid
+++ b/src/includes/footer.liquid
@@ -1,7 +1,7 @@
 <footer id="footer">
-  <div class="footer-text center">Designed and developed with ❤️ by Ben Cuan, July 2020</div>
+  <div class="footer-text center">Designed and developed with ❤️ by Ben Cuan, June 2021</div>
   <div class="footer-text center"><a class="link" target="_blank" rel="noopener" href="https://github.com/64bitpandas/bencuan.me">Browse the source at <i class="fab fa-github footer-icon"></i> !</a></div>
-  <div class="footer-text center"><a class="link" href="/2018">2018</a> | <a class="link" href="/2019">2019</a></div>
+  <div class="footer-text center"><a class="link" href="/2018">2018</a> | <a class="link" href="/2019">2019</a> | <a class="link" href="/2020">2020</a></div>
 </footer>
   <link rel="stylesheet" href="/css/normalize.css">
   <link rel="stylesheet" href="https://use.typekit.net/jps3ukf.css">
