--- a/src/sass/custom.scss
+++ b/src/sass/custom.scss
@@ -398,6 +398,7 @@ nav {
 @include mixins.screen("mobile") {
   nav {
     height: $nav-height * 0.75;
+    overflow: visible;
     img {
       max-height: 100%;
       max-width: $nav-height * 0.75;
@@ -427,8 +428,8 @@ nav {
 
     #burger-menu {
       position: fixed;
-      height: 100%;
-      width: 100%;
+      height: 100vh;
+      width: 100vw;
       left: 100%;
       transition: all $anim-speed;
       text-align: center;
@@ -554,6 +555,11 @@ Content
 @include mixins.screen("not-mobile") {
   .content-box {
     transform: translateX(-5%);
+
+    &:hover {
+      box-shadow: 6px 6px 5px 0px rgb(0, 0, 0);
+      transform: translate(-5%, -2%);
+    }
   }
 }
 
@@ -572,13 +578,8 @@ Content
   background: #222;
   transition: box-shadow $anim-speed, transform $anim-speed;
 
-  @include mixins.gradient-border($border-width);
-
   // Gradient border animation inspired by https: //codepen.io/alphardex/pen/vYEYGzp
-  &:hover {
-    box-shadow: 6px 6px 5px 0px rgb(0, 0, 0);
-    transform: translate(-5%, -2%);
-  }
+  @include mixins.gradient-border($border-width);
 
   .content {
     // position: absolute;
@@ -755,6 +756,16 @@ Featured Projects
   .feature-link-container {
     text-align: right;
   }
+
+  .content-box:hover .feature-img {
+    transform: scale(1.01);
+    filter: brightness(1);
+    box-shadow: 6px 6px 5px 0px rgba(0, 0, 0, 0.5);
+  }
+  
+  .content-box:hover .feature-link i {
+    transform: scale(1.1) translateY(-5px);
+  }
 }
 
 .feature-img {
@@ -785,23 +796,15 @@ Featured Projects
   }
 }
 
-.content-box:hover .feature-img {
-  transform: scale(1.01);
-  filter: brightness(1);
-  box-shadow: 6px 6px 5px 0px rgba(0, 0, 0, 0.5);
-}
 
-.content-box:hover .feature-link i {
-  transform: scale(1.1) translateY(-5px);
-}
+
 
 /* ---------------
 More Projects
 ------------------ */
 
 .proj-buttons {
-  left: -5%;
-  width: 110%;
+  width: 100%;
 }
 
 .btn-proj {
@@ -821,9 +824,15 @@ More Projects
 
   &:hover {
     // border: 10px solid transparent;
-    transform: scale(1.1) translateY(-10px);
+    
     box-shadow: 2px 6px 6px 0px rgba(0, 0, 0, 1);
     cursor: pointer;
+  }
+}
+
+@include mixins.screen("not-mobile") {
+  .btn-proj:hover {
+      transform: scale(1.1) translateY(-10px);
   }
 }
 
