Color palette redesign + upgrade resume button

--- a/src/includes/nav.liquid
+++ b/src/includes/nav.liquid
@@ -1,6 +1,6 @@
 <nav>
-    <div class="nav-background" id="nav-back"></div>
-    <div id="nav-fill-home" class="nav-fill logo-color"></div>
+    <div class="nav-background home-color" id="nav-back"></div>
+    <div id="nav-fill-home" class="nav-fill home-color"></div>
     <div id="nav-fill-about" class="nav-fill about-color"></div>
     <div id="nav-fill-proj" class="nav-fill proj-color"></div>
     <div id="nav-fill-contact" class="nav-fill contact-color"></div>
@@ -20,7 +20,7 @@
       </div>
       <div class="col-2"></div>
       <div class="col-3">
-        <a href="/resume" id="nav-resume" class="resume-button"> Resume </a>
+        <a href="/resume" id="nav-resume" class="resume-button home-color-secondary"><i class="fas fa-file-pdf"></i> Resume </a>
       </div>
     </div>
     <div class="mobile-only row">
@@ -30,7 +30,7 @@
       </div>
     </div>
 
-    <div class="mobile-only logo-color" id="burger-menu">
+    <div class="mobile-only home-color" id="burger-menu">
         <a href="#about" id="mobile-nav-about" class="burger-link" ><i class="fas fa-info-circle"></i>  About</a>
         <a href="#projects" id="mobile-nav-proj" class="burger-link"><i class="fas fa-paint-roller"></i>  Projects</a>
         <a href="#contact" id="mobile-nav-contact" class="burger-link"><i class="fas fa-mobile"></i>  Contact</a>
