--- a/src/sass/_fonts.scss
+++ b/src/sass/_fonts.scss
@@ -13,3 +13,7 @@ $europa: europa, roboto, Georgia, sans-serif;
 $neue-haas: neue-haas-unica, Helvetica, sans-serif;
 $monospace: roboto-mono, monospace;
 $forma: forma-djr-micro, Helvetica, sans-serif;
+$trade-gothic: trade-gothic-next, sans-serif;
+
+
+$body: $europa;
