--- a/src/sass/_colors.scss
+++ b/src/sass/_colors.scss
@@ -3,11 +3,24 @@ Color Palette for bencuan.me - v4_2021
 Created by Ben Cuan
 ====================================== */
 
+// 2021 colors (https://coolors.co/5e2db4-7f4eb8-ff4778-ff70a7-335cdc-458ecd-36bf64-6bc777-ff8b33)
+$blue-primary: #335CDC;
+$blue-secondary: #458ECD;
+$green-primary: #36BF64;
+$green-secondary: #6BC777;
+$orange-primary: #FF8B33;
+$orange-secondary: #FFE74C;
+$red-primary: #FF4778;
+$red-secondary: #FF70A7;
+$purple-primary: #5E2DB4;
+$purple-secondary: #7F4EB8;
+
+
 // Main colors
 $bg: #293241;
 $bg-light: #435166;
 $footer: #272635;
-$highlight: #e097ff;
+$highlight: #F099FF;
 $accent: #26ffe6;
 $secondary: #3abeff;
 
@@ -19,59 +32,71 @@ $gradient4: #c133a3;
 
 // Special colors
 $github: #181717;
-$resume: #6f02b5;
-$linkedin: #0d5aa7;
-$itch: #fa5c5c;
-$email: #43a047;
-$logo: #23bcff;
-
-$about: #ef8354;
-$projects: #38bc76;
-$contact: #a63a50;
+$resume: $purple-secondary;
+$linkedin: $blue-primary;
+$itch: $red-secondary;
+$email: $purple-primary;
+$logo: $blue-primary;
 
 $selection: #edc2ff;
-
 
 /* ----------
 Color classes
 ------------- */
 .github {
-    background-color: $github;
-  }
-  
-  .linkedin {
-    background-color: $linkedin;
-  }
-  
-  .resume {
-    background-color: $resume;
-  }
-  
-  .email {
-    background-color: $email;
-  }
-  
-  .itch {
-    background-color: $itch;
-  }
-  
-  .logo-color,
-  .home-color {
-    background-color: $logo;
-  }
-  
-  .about-color {
-    background-color: $about;
-  }
-  
-  .proj-color {
-    background-color: $projects;
-  }
-  
-  .contact-color {
-    background-color: $contact;
-  }
-  
-  .gradient2-color {
-    background-color: $gradient2;
-  }
+	background-color: $github;
+}
+
+.linkedin {
+	background-color: $linkedin;
+}
+
+.resume {
+	background-color: $resume;
+}
+
+.email {
+	background-color: $email;
+}
+
+.itch {
+	background-color: $itch;
+}
+
+.logo-color,
+.about-color {
+	background-color: $blue-primary;
+}
+
+.home-color {
+  background-color: $purple-primary;
+}
+
+.proj-color {
+	background-color: $green-primary;
+}
+
+.contact-color {
+	background-color: $red-primary;
+}
+
+.logo-color-secondary,
+.about-color-secondary {
+	background-color: $blue-secondary;
+}
+
+.home-color-secondary {
+  background-color: $purple-secondary;
+}
+
+.proj-color-secondary {
+	background-color: $green-secondary;
+}
+
+.contact-color-secondary {
+	background-color: $red-secondary;
+}
+
+.gradient2-color {
+	background-color: $gradient2;
+}
