--- a/src/sass/custom.scss
+++ b/src/sass/custom.scss
@@ -66,7 +66,7 @@ body {
 }
 
 .link {
-  font-family: fonts.$europa;
+  font-family: fonts.$body;
   text-decoration: none;
   color: colors.$highlight !important;
   font-weight: 500;
@@ -139,7 +139,7 @@ Landing
   &:after {
     // @include mixins.stepped-radial-gradient(colors.$gradient3, colors.$gradient1);
     background-size: 300%;
-    background: radial-gradient(circle, colors.$gradient1, colors.$gradient4);
+    background: radial-gradient(circle, colors.$purple-primary, colors.$purple-secondary);
     animation: landingAnim 15s linear infinite;
   }
 
@@ -211,8 +211,8 @@ Landing
 
   background-image: linear-gradient(
     90deg,
-    colors.$gradient4,
-    colors.$gradient2
+    colors.$purple-primary,
+    colors.$purple-secondary
   );
   background-clip: text;
   color: transparent;
@@ -372,7 +372,7 @@ nav {
     height: 100%;
     left: -10px;
     top: 0;
-    border-radius: 10px;
+    // border-radius: 10px;
     z-index: 10;
     transition: clip-path 0.8s ease;
     clip-path: circle(0% at 100px 100px);
@@ -476,7 +476,7 @@ nav {
 
     a,
     i {
-      font-family: fonts.$europa;
+      font-family: fonts.$body;
       color: white;
       display: table-cell;
       vertical-align: middle;
@@ -502,14 +502,23 @@ nav {
     }
 
     .resume-button {
-      display: inline-block;
-      background-color: colors.$resume;
-      padding: 0 1.25rem;
-      border-radius: 30px;
-      margin-top: ($nav-height) / 2 - 1.25rem;
-      // width: 50%;
-      // height: 80%;
+      display: flex;
+      right: 0;
+      justify-content: center;
+      align-items: center;
+      padding: 0.25rem 1.25rem;
+      border-radius: 5px;
+      margin-top: ($nav-height) * 1 / 8;
+      height: ($nav-height) * 3 / 4 - 0.5rem;
+      width: 50%;
+      margin-left: 35%;
       text-align: center;
+      align-self: self-end;
+
+      i {
+        transform: translateY(2px);
+        margin-right: 0.5rem;
+      }
     }
   }
 }
@@ -573,7 +582,7 @@ Content
   $border-width: 5px;
   border-radius: $border-width;
   width: 100%;
-  font-family: fonts.$europa;
+  font-family: fonts.$body;
   color: white;
   background: #222;
   transition: box-shadow $anim-speed, transform $anim-speed;
@@ -694,7 +703,7 @@ Featured Projects
   font-weight: 700;
   @include mixins.responsive-text(30, 45, 60);
   position: relative;
-  font-family: fonts.$europa;
+  font-family: fonts.$body;
 }
 
 .feature-box {
@@ -888,7 +897,7 @@ More Projects
 .proj-desc,
 .proj-icons {
   text-align: center;
-  font-family: fonts.$europa;
+  font-family: fonts.$body;
   line-height: 1.2;
 }
 
@@ -944,7 +953,7 @@ Contact Me
 .contact-text {
   color: white;
   @include mixins.responsive-text(15, 20, 30);
-  font-family: fonts.$europa;
+  font-family: fonts.$body;
   font-weight: 300;
   line-height: 1.3;
 }
@@ -989,7 +998,7 @@ Footer
   padding: 0.4rem;
   color: white;
   @include mixins.responsive-text(10, 15, 20);
-  font-family: fonts.$europa;
+  font-family: fonts.$body;
   font-weight: 300;
   font-style: normal;
 }
