Add teaching section

--- a/src/index.liquid
+++ b/src/index.liquid
@@ -9,6 +9,7 @@
 
   <div id="content">
     {% include 'about' %}
+    {% include 'teaching' %}
     {% include 'featured-projects' %}
     {% include 'more-projects' %}
     {% include 'contact' %}
