--- a/src/includes/more-projects.liquid
+++ b/src/includes/more-projects.liquid
@@ -1,5 +1,5 @@
 <!-- MORE PROJECTS SECTION -->
-<div class="section-head center-head">More Projects</div>
+<div class="section-head center-head" id="more-proj">More Projects</div>
 
 <div class="row center proj-buttons">
 <div class="btn-proj btn-proj-selected" id="proj-all">
@@ -46,7 +46,7 @@
                     </span>
                     {% if project.link %}
                         <span class="feature-link proj-link" onclick="openInNewTab('{{project.link}}')">
-                        <i class="fas fa-external-link-square-alt"></i>
+                        <i class="fas fa-globe"></i>
                         </span>
                     {% endif %}
                 </div>
