Add intro animation

--- a/src/sass/_animations.scss
+++ b/src/sass/_animations.scss
@@ -19,3 +19,56 @@ Created by Ben Cuan
     background-position: left;
   }
 }
+
+// Splash wave animation
+@include mixins.keyframes(wave) {
+  0% {
+  }
+  100% {
+    transform: translateY(100vh) translateX(-30%);
+  }
+}
+
+@include mixins.keyframes(wave-background) {
+  0% {
+    height: 100%;
+  }
+
+  100% {
+    height: 0;
+    // transform: translateY(100%);
+    display: none;
+  }
+}
+
+@include mixins.keyframes(landingAnim) {
+  25% {
+    transform: translateY(-75%);
+    filter: hue-rotate(-30deg);
+  }
+
+  50% {
+    transform: translate(-75%, -75%);
+  }
+
+  75% {
+    transform: translate(-75%, 0);
+    filter: hue-rotate(30deg);
+  }
+
+  0%,
+  100% {
+    transform: translate(0, 0);
+    filter: hue-rotate(0deg);
+  }
+}
+
+@include mixins.keyframes(appear) {
+  0% {
+    clip-path: circle(0% at 50% 100%);
+  }
+
+  100% {
+    clip-path: circle(300% at 50% 100%);
+  }
+}
