Coordinated color schemes

--- a/src/includes/teaching.liquid
+++ b/src/includes/teaching.liquid
@@ -1,7 +1,7 @@
  <!-- START TEACHING -->
 <div id="teaching" class="container content-section">
     <div class="section-head center-head">Teaching</div>
-    <div class="content-box">
+    <div class="content-box" id="teaching-content">
         <div class="content content-text">
             I am currently a TA for <a href="https://cs61a.org" target="_blank" class="link">CS 61A</a> at Berkeley. 
             Summer 2021 will be my 3rd time teaching the course; I'm excited to be back! (If you're a 61A student, hello!! I hope to see you around in lab/discussion/office hours :)
