--- a/src/sass/_colors.scss
+++ b/src/sass/_colors.scss
@@ -19,8 +19,8 @@ $purple-secondary: #7F4EB8;
 
 
 // Main colors
-$bg: #293241;
-$bg-light: #435166;
+$bg: #383b56;
+$bg-light: #505570;
 $footer: #272635;
 $highlight: #F099FF;
 $accent: #26ffe6;
