--- a/src/sass/custom.scss
+++ b/src/sass/custom.scss
@@ -580,6 +580,7 @@ Content
   .left-head {
     text-align: left;
     transform: translateX(-5%);
+    padding-top: 3rem;
   }
   .right-head {
     text-align: right;
